--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
             <tr>
                 <td>
                     <a href="https://www.google.com">
-                        <img style="float: left;" width="300px" src="images\IMG_20220226_121112.jpg"
+                        <img style="float: left;" width="300px" src="IMG_20220226_121112.jpg"
                             alt="Abhishek Borkar'S photo">
                     </a>
                 </td>
